# flask_practice_yun

./: .gitignore  config.py  hello.py  pyproject.toml  v1.py  v2.py
templates/: hello.html  hello_template.html
